--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -4,6 +4,7 @@
 @import 'core/utilities';
 
 @import 'components/svgs';
+@import 'components/buttons';
 @import 'components/swatch';
 @import 'components/forms';
 @import 'components/hr';
