--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import 'components/video-loop-gif';
 @import 'components/video-card';
 @import 'components/social-icons';
+@import 'components/carousel';
 @import 'components/article-proggress-bar';
 @import 'components/badge';
 @import 'components/list';
