--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,49 +1,49 @@
 @import 'core';
-@import 'bootstrap/common';
-@import 'bootstrap/main';
-@import 'common';
+// @import 'bootstrap/common';
+// @import 'bootstrap/main';
+// @import 'common';
 
-@import 'components/accordion';
-@import 'components/cookie-banner';
-@import 'components/announcement-bar';
-@import 'components/dropdown';
-@import 'components/video-loop';
-@import 'components/video-loop-gif';
-@import 'components/video-card';
-@import 'components/social-icons';
-@import 'components/carousel';
-@import 'components/article-proggress-bar';
-@import 'components/badge';
-@import 'components/list';
-@import 'components/product-subscription';
+// @import 'components/accordion';
+// @import 'components/cookie-banner';
+// @import 'components/announcement-bar';
+// @import 'components/dropdown';
+// @import 'components/video-loop';
+// @import 'components/video-loop-gif';
+// @import 'components/video-card';
+// @import 'components/social-icons';
+// @import 'components/carousel';
+// @import 'components/article-proggress-bar';
+// @import 'components/badge';
+// @import 'components/list';
+// @import 'components/product-subscription';
 
-@import 'compounds/post-card';
-@import 'compounds/image-with-text';
-@import 'compounds/product-waitlist';
-@import 'compounds/product-banner';
-@import 'compounds/product-variant';
-@import 'compounds/product-card';
-@import 'compounds/shop-article';
-@import 'compounds/product-card-abtest';
-@import 'compounds/product-card-cta-abtest';
-@import 'compounds/result-card';
-@import 'compounds/upsell';
-@import 'compounds/birthday-popup';
-@import 'compounds/exit-intent';
-@import 'compounds/newsletter-popup';
-@import 'compounds/sweepstakes-popup';
-@import 'compounds/cookies-popup';
-@import 'compounds/pdp-upsell';
+// @import 'compounds/post-card';
+// @import 'compounds/image-with-text';
+// @import 'compounds/product-waitlist';
+// @import 'compounds/product-banner';
+// @import 'compounds/product-variant';
+// @import 'compounds/product-card';
+// @import 'compounds/shop-article';
+// @import 'compounds/product-card-abtest';
+// @import 'compounds/product-card-cta-abtest';
+// @import 'compounds/result-card';
+// @import 'compounds/upsell';
+// @import 'compounds/birthday-popup';
+// @import 'compounds/exit-intent';
+// @import 'compounds/newsletter-popup';
+// @import 'compounds/sweepstakes-popup';
+// @import 'compounds/cookies-popup';
+// @import 'compounds/pdp-upsell';
 
-@import 'sections/playground';
-@import 'sections/instagram';
-@import 'sections/yotpo-widget';
+// @import 'sections/playground';
+// @import 'sections/instagram';
+// @import 'sections/yotpo-widget';
 
-@import 'templates/article';
-@import 'templates/blog';
-@import 'templates/collection';
-@import 'templates/stockist';
-@import 'templates/sustainability';
-@import 'templates/sweepstakes';
-@import 'templates/our-story';
-@import 'templates/product';
+// @import 'templates/article';
+// @import 'templates/blog';
+// @import 'templates/collection';
+// @import 'templates/stockist';
+// @import 'templates/sustainability';
+// @import 'templates/sweepstakes';
+// @import 'templates/our-story';
+// @import 'templates/product';
