--- a/src/styles/core/_type.scss
+++ b/src/styles/core/_type.scss
@@ -1,69 +1,43 @@
-@include media-breakpoint-up(lg) {
-	h1, .h1 {
-		@include font-size($h1-font-size-lg);
-	}
-	h2, .h2 {
-		@include font-size($h2-font-size-lg);
-	}
-	h3, .h3 {
-		@include font-size($h3-font-size-lg);
-	}
-	h4, .h4 {
-		@include font-size($h4-font-size-lg);
-		font-weight: 400;
-	}
+h1, .h1 {
+	@apply text-2xl font-bold mb-1;
 }
-
-.text-underline {
-	text-decoration: underline;
+h2, .h2 {
+	@apply text-xl font-bold mb-1;
 }
-
-.text-linethrough {
-	text-decoration: line-through;
+h3, .h3 {
+	@apply text-base font-bold mb-1;
 }
-
-.link-secondary {
-	color: $body-color !important;
-	&:hover {
-		color: $primary !important;
-	}
+h4, .h4 {
+	@apply text-base mb-1;
 }
-
-.font-size-lg {
-	font-size: $font-size-lg !important;
-}
-.font-size-base {
-	font-size: $font-size-base !important;
-}
-.font-size-sm {
-	font-size: $font-size-sm !important;
-}
-.font-size-xs {
-	font-size: $font-size-xs !important;
-}
-@include media-breakpoint-up(lg) {
-	.font-size-dt-lg {
-		font-size: $font-size-lg !important;
-	}
-	.font-size-dt-base {
-		font-size: $font-size-base !important;
-	}
-	.font-size-dt-sm {
-		font-size: $font-size-sm !important;
-	}
-	.font-size-dt-xs {
-		font-size: $font-size-xs !important;
-	}
-}
-
 .hero-font-size {
-	@include font-size($hero-banner-font-size);
-
-	@include media-breakpoint-up(lg) {
-		@include font-size($hero-banner-font-size-lg);
-	}
+	@apply text-2xl;
 }
 
 .playground-font-size {
-	@include font-size($hero-banner-font-size-lg);
+	@apply text-3xl;
+}
+
+@screen lg {
+	h2, .h2 {
+		@apply text-lg font-bold;
+	}
+	h4, .h4 {
+		@apply text-lg;
+	}
+	.font-size-dt-lg {
+		@apply text-lg;
+	}
+	.font-size-dt-base {
+		@apply text-base;
+	}
+	.font-size-dt-sm {
+		@apply text-sm;
+	}
+	.font-size-dt-xs {
+		@apply text-xs;
+	}
+	.hero-font-size {
+		@apply text-3xl;
+	}
 }
