--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 // @import 'bootstrap/main';
 // @import 'common';
 
-// @import 'components/accordion';
+@import 'components/accordion';
 // @import 'components/cookie-banner';
 // @import 'components/announcement-bar';
 // @import 'components/dropdown';
