--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -1,39 +1,50 @@
-.accordion-item {
-    border-right: none;
-    border-left: none;
-}
-
-.accordion-button:not(.collapsed) {
-    &:focus,
-    &:active {
-        box-shadow: none;
-        border-bottom: $accordion-border-width solid $accordion-border-color;
-    }
-}
-
-.card {
-    border-left: none;
-    border-right: none;
-}
-
-.card-header {
-    .chevron-down {
-        position: absolute;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%) rotate(180deg);
+@layer components {
+    .accordion-item {
+        border-right: none;
+        border-left: none;
     }
 
-    &.collapsed .chevron-down {
-        transform: translateY(-50%);
-    }
-}
-
-.mobile-nav__menu {
     .accordion-button:not(.collapsed) {
         &:focus,
         &:active {
-            border: none;
+            box-shadow: none;
         }
     }
+
+    .accordion-flush .accordion-item:last-child {
+        border-bottom: 0;
+    }
+
+    .accordion-item:not(:first-of-type),
+    .accordion-flush .accordion-item:first-child {
+        border-top: 0;
+    }
+
+    .card {
+        border-left: none;
+        border-right: none;
+    }
+
+    .card-header {
+        .chevron-down {
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%) rotate(180deg);
+        }
+
+        &.collapsed .chevron-down {
+            transform: translateY(-50%);
+        }
+    }
+
+    .mobile-nav__menu {
+        .accordion-button:not(.collapsed) {
+            &:focus,
+            &:active {
+                border: none;
+            }
+        }
+    }
+
 }
