accordion component ts

--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -11,6 +11,10 @@
         }
     }
 
+    .max-h-0 {
+        max-height: 0;
+    }
+
     .accordion-flush .accordion-item:last-child {
         border-bottom: 0;
     }
