accordion component ts

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -9,6 +9,10 @@
 	a {
 		@apply text-primary text-base hover:underline hover:text-primary-darken;
 	}
+
+	p, div {
+		@apply leading-base;
+	}
 }
 
 // @charset 'UTF-8';
