--- a/src/styles/components/_svgs.scss
+++ b/src/styles/components/_svgs.scss
@@ -1,16 +1,8 @@
 .svg {
-	height: $font-size-base;
+	// height: $font-size-base;
 	&--current-color {
 		path {
 			fill: currentColor;
 		}
 	}
-}
-
-.fill-primary {
-	fill: $primary;
-}
-
-.fill-secondary {
-	fill: $secondary;
 }
