--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 // @import 'bootstrap/common';
 // @import 'bootstrap/main';
 // @import 'common';
-
+@import 'components/svgs';
 @import 'components/accordion';
 @import 'components/modal';
 // @import 'components/cookie-banner';
