--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,7 @@
 // @import 'components/dropdown';
 // @import 'components/video-loop';
 // @import 'components/video-loop-gif';
-// @import 'components/video-card';
+@import 'components/video-card';
 // @import 'components/social-icons';
 // @import 'components/carousel';
 // @import 'components/article-proggress-bar';
