--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -23,33 +23,14 @@
 		}
 
 		&__lazy-load__spinner {
-			border: 0.4rem solid #333;
-			border-left: 0.4rem solid #555;
-			font-size: 1rem;
-			display: inline-flex;
-			position: absolute;
-			top: 0;
-			left: 0;
-			bottom: 0;
-			right: 0;
-			margin: auto;
-			text-indent: -9999em;
 			animation: loading 1.1s infinite linear;
-			border-radius: 50%;
-			width: 15px;
-			height: 15px;
 		}
-		&__lazy-load__spinner:after {
-			border-radius: inherit;
-			width: 15px;
-			height: 15px;
-		}
+
 		&__lazy-load__img {
-			opacity: 0;
-			transition: opacity 0.2s ease-in-out;
+			@apply opacity-0 transition-opacity duration-200 ease-in-out;
 		}
 		&__lazy-load--has-loaded .carousel__lazy-load__img {
-			opacity: 1;
+			@apply opacity-100;
 		}
 
 		@keyframes loading {
