task/86enx29wb svgs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 // @import 'components/video-loop-gif';
 @import 'components/video-card';
 @import 'components/colors';
+@import 'components/svg';
 // @import 'components/social-icons';
 @import 'components/carousel';
 // @import 'components/article-proggress-bar';
