--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'components/svg';
 // @import 'components/social-icons';
 @import 'components/carousel';
+@import 'components/nav';
 // @import 'components/article-proggress-bar';
 // @import 'components/badge';
 // @import 'components/list';
