--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -21,10 +21,13 @@
 	}
 
 	.bg-checkbox-checked {
-		background: url('data:image/svg+xml;utf8,<svg role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 25" height="1em"><path fill="%23D62E55" d="M28.82.543c.382-.014.752.14 1.012.421.571.615.604 1.556.076 2.208L12.436 23.97a1.312 1.312 0 01-1.992.072 1.693 1.693 0 01-.167-.21 1.578 1.578 0 01-.138-.127L1.127 14.38a1.621 1.621 0 112.33-2.253l8.058 8.335L27.84 1.04c.239-.3.596-.481.98-.496z"></path></svg>');
+		background: url('data:image/svg+xml;utf8,<svg role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 25" height="1em"><path fill="%23D62E55" d="M28.82.543c.382-.014.752.14 1.012.421.571.615.604 1.556.076 2.208L12.436 23.97a1.312 1.312 0 01-1.992.072 1.693 1.693 0 01-.167-.21 1.578 1.578 0 01-.138-.127L1.127 14.38a1.621 1.621 0 112.33-2.253l8.058 8.335L27.84 1.04c.239-.3.596-.481.98-.496z"></path></svg>') white;
 		background-size: 80%;
 		background-repeat: no-repeat;
 		background-position: center;
+	}
+	.bg-checkbox-unchecked {
+		background: white;
 	}
 }
 
