task/86enxxyv4 Upsell

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -33,7 +33,7 @@
 
 // @charset 'UTF-8';
 
-// @import 'core/functions';
+@import 'core/functions';
 
 // @import 'mixins/carousel';
 // @import 'bootstrap/core';
