--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,7 +31,7 @@
 // @import 'compounds/product-card-abtest';
 // @import 'compounds/product-card-cta-abtest';
 // @import 'compounds/result-card';
-// @import 'compounds/upsell';
+@import 'compounds/upsell';
 // @import 'compounds/birthday-popup';
 // @import 'compounds/exit-intent';
 // @import 'compounds/newsletter-popup';
