product variant compound

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -45,6 +45,51 @@
 			background-color: rgba(255, 255, 255, 0.2);
 		}
 	}
+
+	.custom-control-label:before {
+		position: absolute;
+		display: block;
+		width: 1.25em;
+		height: 1.25em;
+		pointer-events: none;
+		content: '';
+		border: 1px solid #fff;
+		transition: background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
+		border-radius: 50%;
+		top: 1.25rem;
+		left: .9375rem;
+
+		@screen lg {
+			left: 1.5rem;
+		}
+	}
+
+	.custom-control-label::after {
+		position: absolute;
+		top: 0;
+		left: -1.75em;
+		display: block;
+		width: 1.25em;
+		height: 1.25em;
+		content: '';
+		background: 50% / 50% 50% no-repeat;
+	}
+
+	.custom-control-input:focus ~ .custom-control-label::before {
+		box-shadow: 0 0 0 .2rem rgba(0,0,0,0);
+	}
+
+	.custom-radio .custom-control-input:checked ~ .custom-control-label::before {
+		box-shadow: inset 0px 0px 0px 2px #fff;
+	}
+
+	.custom-radio .custom-control-input:checked ~ .custom-control-label::after {
+		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+	}
+
+	.custom-radio .custom-control-input:checked ~ .custom-control-label::after {
+		background-image: none;
+	}
 }
 
 // @charset 'UTF-8';
