--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 // @import 'components/social-icons';
 @import 'components/carousel';
 @import 'components/nav';
+@import 'components/swatch';
 // @import 'components/article-proggress-bar';
 // @import 'components/badge';
 // @import 'components/list';
@@ -25,7 +26,7 @@
 // @import 'compounds/image-with-text';
 // @import 'compounds/product-waitlist';
 // @import 'compounds/product-banner';
-// @import 'compounds/product-variant';
+@import 'compounds/product-variant';
 // @import 'compounds/product-card';
 // @import 'compounds/shop-article';
 // @import 'compounds/product-card-abtest';
