--- a/src/styles/compounds/_product-variant.scss
+++ b/src/styles/compounds/_product-variant.scss
@@ -1,14 +1,17 @@
 .product-variant {
 
 	.custom-control-label {
-		padding-left: calc-em(50, $unit: 1rem);
-		@include media-breakpoint-up(lg) {
+		padding-left: 2em;
+		@screen lg {
 			padding-left: calc-em(69, $unit: 1rem);
 		}
 		&::before {
-			top: calc-em(20, $unit: 1rem);
-			left: calc-em(15, $unit: 1rem);
-			@include media-breakpoint-up(lg) {
+			background: #fff;
+			border: #A3A3A3 solid 1px;
+			top: 0;
+			left: 0;
+			@screen lg {
+				top: calc-em(20, $unit: 1rem);
 				left: calc-em(24, $unit: 1rem);
 			}
 		}
@@ -18,8 +21,10 @@
 		}
 	}
 
-	.svg {
-		fill: $primary;
+	.custom-control-input:checked ~ .custom-control-label::before {
+		color: #fff;
+		border-color: #D62E55;
+		background-color: #D62E55;
 	}
 
 	.product-swatch,
@@ -33,8 +38,7 @@
 		}
 
 		&:checked:active ~ .custom-control-label::before {
-			background-color: $primary;
-			border-color: $primary;
+			@apply bg-primary border-primary;
 		}
 
 		~ .custom-control-label .product-variant__description {
@@ -42,7 +46,7 @@
 		}
 
 		&:checked ~ .custom-control-label {
-			border-color: $primary !important;
+			@apply border-primary;
 			.product-swatch,
 			.product-variant__note {
 				display: block;
@@ -56,7 +60,7 @@
 
 	&--subscription-selected {
 		.custom-control-input:checked ~ .custom-control-label {
-			background-color: $primary-light-second;
+			@apply bg-primary-light-second;
 		}
 
 		.product-variant__title {
@@ -66,16 +70,5 @@
 				display: block !important;
 			}
 		}
-	}
-
-	.text-linethrough {
-		color: $body-color;
-	}
-}
-
-@include media-breakpoint-down(md) {
-	.product-form .swatch {
-		display: flex;
-		flex-wrap: wrap-reverse;
 	}
 }
