task/86enxxx6m Testimonials

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,6 +33,7 @@
 // @import 'compounds/product-card-cta-abtest';
 // @import 'compounds/result-card';
 @import 'compounds/upsell';
+@import 'sections/testimonial';
 // @import 'compounds/birthday-popup';
 // @import 'compounds/exit-intent';
 // @import 'compounds/newsletter-popup';
