task/86enxxx58 Playground

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,7 +41,7 @@
 // @import 'compounds/cookies-popup';
 // @import 'compounds/pdp-upsell';
 
-// @import 'sections/playground';
+@import 'sections/playground';
 // @import 'sections/instagram';
 // @import 'sections/yotpo-widget';
 
