task/86enxxx5z Services

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,6 +42,7 @@
 // @import 'compounds/pdp-upsell';
 
 @import 'sections/playground';
+@import 'sections/services-list';
 // @import 'sections/instagram';
 // @import 'sections/yotpo-widget';
 
