task/86enxxx4r Instagram

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,7 +43,7 @@
 
 @import 'sections/playground';
 @import 'sections/services-list';
-// @import 'sections/instagram';
+@import 'sections/instagram';
 // @import 'sections/yotpo-widget';
 
 // @import 'templates/article';
