--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,7 @@
 // @import 'compounds/sweepstakes-popup';
 // @import 'compounds/cookies-popup';
 // @import 'compounds/pdp-upsell';
+@import 'compounds/nav-mega-menu';
 
 @import 'sections/playground';
 @import 'sections/services-list';
