--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,6 +34,7 @@
 // @import 'compounds/result-card';
 @import 'compounds/upsell';
 @import 'sections/testimonial';
+@import 'sections/sidebar';
 // @import 'compounds/birthday-popup';
 // @import 'compounds/exit-intent';
 // @import 'compounds/newsletter-popup';
