--- a/src/styles/sections/_sidebar.scss
+++ b/src/styles/sections/_sidebar.scss
@@ -1,8 +1,6 @@
 .sidebar {
-	padding: map-get($spacers, 3) $grid-gutter-width;
-	width: -webkit-fill-available;
-
-	@include media-breakpoint-up(lg) {
-		padding: calc-em(40) calc-em(25);
+	padding: 1.875rem 15px;
+	@screen lg {
+		padding: 2.5em 1.5625em;
 	}
 }
